--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Notica",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://myohana.github.io/Notica",
+  "homepage": "https://myOhana.github.io/Notica",
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
@@ -14,7 +14,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "3.4.0",
     "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
