--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Notica",
+  "name": "tapnotes",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://myOhana.github.io/Notica",
@@ -18,8 +18,8 @@
     "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
